Sprint 01: fase 2
Refactor validation exception message in tests, update POM files to include additional RDF4J dependencies, and implement RDF4J repository gateway with transaction support. Add examples for repository import and query operations, along with comprehensive testing for the repository gateway functionality. Enhance testing documentation and scripts for better usability.